/*
 * $Id: ChangeLog,v 1.4257 2005/08/08 00:46:13 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2005-08-08 14:45 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * tests/testw32p.prg
    + added option to print BitMap file

2005-08-08 02:45 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfntx/dbfntx1.c
    + added missing checking for user value in ordKeyAdd()/ordKeyDel()
      for template tags
    ! fixed typo hb_ntxTagGoTop()

  * xharbour/source/rdd/dbf1.c
    * fixed function name in HB_TRACE
    * removed redundant if() statement

  * xharbour/source/vm/classes.c
    * small modification which gives about 10% speed improvement
      of hb_clsFindMethod() - division is one of the most consumed
      operation - if it's possible replace it by bit shifting

2005-08-07 0:37 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * xharbour/source/vm/classes.c
    ! Fixed GPF trap in hb_objGetRealCls() reported by Przemek.

2005-08-07 04:30 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/regex.c
    * Corrected usage of HB_EXPORT

  * utils/xbscript/xbscript.prg
    * Renamed AppMain() to PP_Main() because we do not want it to be used as
      startup procedure when used as a Librarry. The previous question about
      using STATIC Main() was simply an attempt to avoid possible conflict with
      a Main PROCEDURE of an application linked with the lib.

2005-08-07 12:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/hbserv.c
    * do not use == for logical values - use them directly

  * xharbour/source/rtl/readline.c
    * keep [x]Harbour naming convention for typed variable
    ! fixed compilation with HB_TRACE()

  * xharbour/source/vm/classes.c
    ! fixed compilation with HB_TRACE()
